# tad-template-desktop

./: .gitignore  .mcp.json.example  AGENTS.md  README.md  discipline.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  progress.md  task_plan.md  tsconfig.app.json  vite.config.ts
.claude/agents/: discipline-a11y-checker.md  discipline-rls-auditor.md  discipline-scope-guard.md  discipline-security-reviewer.md
.claude/skills/discipline-audit/: SKILL.md
.claude/skills/discipline-doctor/: SKILL.md
.claude/skills/discipline-init/: SKILL.md
.claude/skills/discipline-launch-readiness/: SKILL.md
.claude/skills/discipline-overengineering-check/: SKILL.md
.claude/skills/discipline-step5-slice/: SKILL.md
.discipline/: run-log.md  scorecard.template.yaml
.discipline-os/: README.md  monthly.sh  quarterly.sh  weekly.sh
.github/workflows/: ci.yml
src/: App.tsx  app-shell-content.js  app-shell-view.js  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src/lib/: native.ts
tests/: tooling.discipline.test.js  tooling.test.js
tests/e2e/: app-shell.spec.ts
tools/: check_desktop_release_ready.js
tools/discipline/lib/: discipline-config.ts
