[package]
name = "tad-desktop-app"
version = "0.1.0"
description = "Discipline Loop Desktop Template — Tauri v2 + React + Vite + TypeScript"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
